--- a/BlazorWOL.Server/BlazorWOL.Server.csproj
+++ b/BlazorWOL.Server/BlazorWOL.Server.csproj
@@ -9,7 +9,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
-    <PackageReference Include="WakeOnLAN" Version="1.6.0" />
+    <PackageReference Include="WakeOnLAN" Version="1.6.0">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
